--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A draggable and resizable grid layout with responsive breakpoints.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --ext .js,.jsx && prettier --check ./**.{json,js,yml,md}",
+    "lint": "eslint --ext .js,.jsx && prettier --check ./**.{json,js,yml,md,ts}",
     "test": "jest --coverage",
     "test-update": "jest --updateSnapshot",
     "watch": "jest --watch",
@@ -28,30 +28,22 @@
     "fluid",
     "responsive"
   ],
-  "author": "Samuel Reed <samuel.trace.reed@gmail.com> (http://strml.net/)",
+  "author": "Anton Shchekota <anton.redfox@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/STRML/react-grid-layout/issues"
+    "url": "https://github.com/anthony-redFox/grid-layout-component/issues"
   },
-  "homepage": "https://github.com/STRML/react-grid-layout",
-  "dependencies": {
-    "@babel/eslint-parser": "^7.16.3",
-    "clsx": "^1.1.1",
-    "lodash.isequal": "^4.0.0",
-    "prop-types": "^15.0.0",
-    "react-draggable": "^4.0.0",
-    "react-resizable": "^3.0.4"
-  },
+  "homepage": "https://github.com/anthony-redFox/grid-layout-component",
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.17.2",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
-    "@webpack-cli/serve": "^1.5.2",
-    "babel-jest": "^27.0.6",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^6.2.0",
+    "@webpack-cli/serve": "^1.6.1",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
     "ejs": "^3.1.6",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
@@ -60,19 +52,19 @@
     "eslint-plugin-mocha": "^10.0.3",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-unicorn": "^40.1.0",
-    "exports-loader": "^3.0.0",
-    "husky": "^7.0.2",
-    "imports-loader": "^3.0.0",
-    "jest": "^27.0.6",
-    "lint-staged": "^11.1.2",
+    "exports-loader": "^3.1.0",
+    "husky": "^7.0.4",
+    "imports-loader": "^3.1.1",
+    "jest": "^27.5.1",
+    "lint-staged": "^12.3.3",
     "lodash": "^4.17.21",
     "opener": "^1.5.2",
-    "prettier": "^2.3.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "prettier": "^2.5.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
-    "react-transform-hmr": "^1.0.2",
-    "style-loader": "^3.2.1",
+    "react-transform-hmr": "^1.0.4",
+    "style-loader": "^3.3.1",
     "timsort": "^0.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
