refactor: fix resize and rename index on ts version

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "grid-layout-component",
   "version": "0.1.0",
   "description": "A draggable and resizable grid layout with responsive breakpoints.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "lint": "eslint --ext .js,.jsx && prettier --check ./**.{json,js,yml,md,ts}",
     "test": "jest --coverage",
