--- a/package.json
+++ b/package.json
@@ -36,13 +36,14 @@
   "homepage": "https://github.com/anthony-redFox/grid-layout-component",
   "devDependencies": {
     "@babel/core": "^7.17.2",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
     "@webpack-cli/serve": "^1.6.1",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
+    "construct-style-sheets-polyfill": "^3.1.0",
     "css-loader": "^6.6.0",
     "ejs": "^3.1.6",
     "enzyme": "^3.11.0",
@@ -64,6 +65,7 @@
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-transform-hmr": "^1.0.4",
+    "resize-observer-polyfill": "^1.5.1",
     "style-loader": "^3.3.1",
     "timsort": "^0.3.0",
     "ts-loader": "^9.2.6",
@@ -83,7 +85,8 @@
       "enzyme-to-json/serializer"
     ],
     "testMatch": [
-      "<rootDir>/test/spec/utils-test.js"
+      "<rootDir>/test/spec/utils-test.js",
+      "<rootDir>/test/spec/**/*spec.js"
     ],
     "testEnvironment": "jsdom",
     "testURL": "http://localhost",
