--- a/package.json
+++ b/package.json
@@ -89,15 +89,7 @@
       "<rootDir>/test/spec/**/*spec.js"
     ],
     "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "coverageThreshold": {
-      "global": {
-        "statements": 77.43,
-        "branches": 72.02,
-        "functions": 77.12,
-        "lines": 78.93
-      }
-    }
+    "testURL": "http://localhost"
   },
   "prettier": {
     "trailingComma": "none",
