--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grid-layout-component",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "A draggable and resizable grid layout with responsive breakpoints.",
   "main": "dist/grid-layout-component.min.js",
   "types": "dist/index.d.ts",
@@ -35,45 +35,43 @@
   },
   "homepage": "https://github.com/anthony-redFox/grid-layout-component",
   "devDependencies": {
-    "@babel/core": "^7.17.2",
-    "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@webpack-cli/serve": "^1.6.1",
-    "babel-jest": "^27.5.1",
-    "babel-loader": "^8.2.3",
+    "@babel/core": "^7.23.5",
+    "@babel/eslint-parser": "^7.23.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@webpack-cli/serve": "^2.0.5",
+    "babel-jest": "^29.7.0",
+    "babel-loader": "^9.1.3",
     "construct-style-sheets-polyfill": "^3.1.0",
-    "css-loader": "^6.6.0",
+    "css-loader": "^6.8.1",
     "dts-bundle-webpack": "^1.0.2",
-    "ejs": "^3.1.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
-    "enzyme-to-json": "^3.6.2",
-    "eslint": "^8.8.0",
-    "eslint-plugin-mocha": "^10.0.3",
-    "eslint-plugin-react": "^7.28.0",
+    "ejs": "^3.1.9",
+    "eslint": "^8.55.0",
+    "eslint-plugin-mocha": "^10.2.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unicorn": "^40.1.0",
-    "exports-loader": "^3.1.0",
-    "husky": "^7.0.4",
-    "imports-loader": "^3.1.1",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.3.3",
+    "exports-loader": "^4.0.0",
+    "husky": "^8.0.3",
+    "imports-loader": "^4.0.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.0",
     "lodash": "^4.17.21",
     "opener": "^1.5.2",
-    "prettier": "^2.5.1",
+    "prettier": "^3.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hot-loader": "^4.13.0",
+    "react-hot-loader": "^4.13.1",
     "react-transform-hmr": "^1.0.4",
     "resize-observer-polyfill": "^1.5.1",
-    "style-loader": "^3.3.1",
+    "style-loader": "^3.3.3",
     "timsort": "^0.3.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -82,15 +80,14 @@
     "setupFilesAfterEnv": [
       "<rootDir>test/util/setupTests.js"
     ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ],
     "testMatch": [
       "<rootDir>/test/spec/utils-test.js",
       "<rootDir>/test/spec/**/*spec.js"
     ],
     "testEnvironment": "jsdom",
-    "testURL": "http://localhost"
+    "testEnvironmentOptions": {
+      "url": "http://localhost"
+    }
   },
   "prettier": {
     "trailingComma": "none",
